update index.html and style.css and fix horizontal scroll

--- a/styles.css
+++ b/styles.css
@@ -960,6 +960,7 @@ div.language ul li {
 
   .contact-form li {
     margin: 2%;
+    width: 100%;
     padding-left: 2%;
     padding-right: 2%;
   }
